# harmonia-ignition

./: README.md
cli/: README.md  package-lock.json  package.json
cli/src/: testmarketplace.ts
cli/src/commands/: createProject.ts  sayHello.ts  utils.ts
cli/src/data/: model.ts
cli/wallets/: alice.json  bob.json
harmonia-ignition-2.0/: Anchor.toml
harmonia-ignition-2.0/programs/harmonia-ignition-2.0/: Cargo.toml
harmonia-ignition-2.0/programs/harmonia-ignition-2.0/src/: lib.rs
harmonia-ignition-2.0/tests/: harmonia-ignition-2.0.js
harmonia-ignition-2.1/programs/harmonia-ignition-2.1/: Cargo.toml
harmonia-ignition-2_1/: Anchor.toml
harmonia-ignition-2_1/tests/: harmonia-ignition-2.1.js
program/: Cargo.toml  README.md
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-73rmVNjyRiZGG2MwKAgL488rpxdKmSivQuJkncRJwVLm.tar  snapshot-200-N8ZW2rp6o8HyytGiUpDoHmwRkcLVbrE3AJJo5jJ9T9y.tar  snapshot-300-4CB9QcKn7DH6yCQ9PwoKdmS6TYcQZDd51SRhRe9Mt2Nv.tar  validator-keypair.json  vote-account-keypair.json
program/test-ledger/accounts/: 0.38  10.56  100.255  101.254  102.253  103.251  104.250  105.249  106.248  107.247  108.246  109.245  11.58  110.256  111.258  112.260  113.262  114.266  115.265  116.268  117.270  118.274  119.273  12.60  120.276  121.278  122.282  123.281  124.284  125.288  126.287  127.290  128.294  129.293  13.62  130.298  131.297  132.300  133.304  134.303  (+161 more)
program/test-ledger/rocksdb/: 000077.sst  000078.sst  000079.sst  000080.sst  000081.sst  LOG  (+5 more)
(+4 files in other folders)
